--- a/AntDeploy/packages.config
+++ b/AntDeploy/packages.config
@@ -38,5 +38,25 @@
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Dataflow" version="4.5.24" targetFramework="net461" />
+  <package id="VSSDK.DTE" version="7.0.4" targetFramework="net46" />
+  <package id="VSSDK.GraphModel" version="11.0.4" targetFramework="net46" />
+  <package id="VSSDK.IDE" version="7.0.4" targetFramework="net46" />
+  <package id="VSSDK.IDE.10" version="10.0.4" targetFramework="net46" />
+  <package id="VSSDK.IDE.11" version="11.0.4" targetFramework="net46" />
+  <package id="VSSDK.IDE.12" version="12.0.4" targetFramework="net46" />
+  <package id="VSSDK.IDE.8" version="8.0.4" targetFramework="net46" />
+  <package id="VSSDK.IDE.9" version="9.0.4" targetFramework="net46" />
+  <package id="VSSDK.OLE.Interop" version="7.0.4" targetFramework="net46" />
+  <package id="VSSDK.Shell.12" version="12.0.4" targetFramework="net46" />
+  <package id="VSSDK.Shell.Immutable.10" version="10.0.4" targetFramework="net46" />
+  <package id="VSSDK.Shell.Immutable.11" version="11.0.4" targetFramework="net46" />
+  <package id="VSSDK.Shell.Immutable.12" version="12.0.4" targetFramework="net46" />
+  <package id="VSSDK.Shell.Interop" version="7.0.4" targetFramework="net46" />
+  <package id="VSSDK.Shell.Interop.8" version="8.0.4" targetFramework="net46" />
+  <package id="VSSDK.Shell.Interop.9" version="9.0.4" targetFramework="net46" />
+  <package id="VSSDK.TextManager.Interop" version="7.0.4" targetFramework="net46" />
+  <package id="VSSDK.TextManager.Interop.8" version="8.0.4" targetFramework="net46" />
+  <package id="VSSDK.Threading" version="12.0.4" targetFramework="net46" />
+  <package id="VSSDK.Threading.12" version="12.0.4" targetFramework="net46" />
   <package id="WinFormAnimation" version="1.5.6298.3372" targetFramework="net461" />
 </packages>
