--- a/AntDeployAgent/AntDeployAgent.csproj
+++ b/AntDeployAgent/AntDeployAgent.csproj
@@ -41,7 +41,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Primitives" Version="4.3.0" />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
-    <PackageReference Include="Microsoft.Web.Administration" Version="11.1.0" />
+    <PackageReference Include="Microsoft.Web.Administration" Version="11.0.0" />
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.1.0" />
     <PackageReference Include="TinyFox" Version="4.0.1.26" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
 
